Added namespace for vectors

--- a/LifeOnABox/ToDo.txt
+++ b/LifeOnABox/ToDo.txt
@@ -2,6 +2,11 @@
 	-Mouse
 	-Keyboard
 -Generate World
+	-Forrest
+	-Savannah
+	-Plains
+	-Desert
+	-HillBilly
 -Render World
 -Game Physics
 	-Changing Gravity
